<resources>
    <string name="app_name">Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, \nyou\'ve been missed!</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account_to_explore_the_market">Create an account to explore the market!</string>
    <string name="search_any_product">Search any product..</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="welcome_to_store">Welcome to Store</string>
    <string name="categories">Categories</string>
    <string name="dresses">Dresses</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="total_price">Total Price:</string>
    <string name="buy">Buy</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email_we_will_send_you_reset_password_email">Please enter your email. We will send you reset password email.</string>
    <string name="send">Send</string>
</resources>