<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screen.log_in.LogInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ellipsizeOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ellipsizeTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logInHereText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login_here"
        android:textColor="@color/accentBlue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/welcome_back_you_ve_been_missed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logInHereText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_input"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingTop="6dp"
        android:textColor="#626262"
        android:textColorHint="#626262"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_input"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingTop="6dp"
        android:textColor="#626262"
        android:textColorHint="#626262"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_your_password"
        android:textColor="@color/accentBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins"
        android:paddingTop="6dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPass" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createNewAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/logInBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/or_continue_with"
        android:textColor="@color/accentBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/createNewAcc" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rectangleOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rectangleTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/googleButton"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_icon"
        android:padding="10dp"
        android:src="@drawable/google_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orContinue" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>