<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:background="@drawable/rounded_cart_item"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/urbanist"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bebas"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_quantity_button"
        android:text="@string/plus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/quantity"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plusBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minusBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_quantity_button"
        android:text="@string/minus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteBtn"
        app:layout_constraintEnd_toStartOf="@id/quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/delete"
        android:background="@drawable/rounded_category_button"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>